--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Flask Practice</title>
+    <title>Flask</title>
 </head>
 <body>
     <h1>Welcome to Flask Practice</h1>
