--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,6 @@
     <title>Flask</title>
 </head>
 <body>
-    <h1>Welcome to Flask Practice</h1>
+    <h1>Welcome to nagendra </h1>
 </body>
 </html>
